--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3871,68 +3871,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(per)"
+    "#149 C"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('1', '2', '3')\n",
-      "('1', '3', '2')\n",
-      "('2', '1', '3')\n",
-      "('2', '3', '1')\n",
-      "('3', '1', '2')\n",
-      "('3', '2', '1')\n"
+      "2\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "import itertools\n",
-    "per=\"321\"\n",
-    "per=sorted(per)\n",
-    "for i in itertools.permutations(per,3):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('1', '2', '3')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "P"
+    "x=int(input())\n",
+    "while(True):\n",
+    "    for i in range(2,x):\n",
+    "        if x%i==0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(x)\n",
+    "        break\n",
+    "    x+=1"
    ]
   },
   {
