--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -6,6 +6,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#169 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b=map(int,input().split())\n",
+    "print(a*b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#169 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=int(input())\n",
+    "a=list(map(int,input().split()))\n",
+    "ans=1\n",
+    "a=sorted(a)\n",
+    "for i in range(N):\n",
+    "    if a[i]==0:\n",
+    "        print(0)\n",
+    "        break\n",
+    "    else:\n",
+    "        ans*=a[i]\n",
+    "        if ans>10**18:\n",
+    "            print(-1)\n",
+    "            break\n",
+    "else:\n",
+    "    print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#169 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "a,b=map(float,input().split())\n",
+    "print(math.floor(a*b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#168 A"
    ]
   },
