--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -254,26 +254,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 1, 2, 2]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ans"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -4212,6 +4192,66 @@
     "    if S[i]==S[i+1]:\n",
     "        count-=1\n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#142 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "8 2 7 3 4 5 6 1\n",
+      "8 2 4 5 6 7 3 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "A=list(map(int,input().split()))\n",
+    "ans=[]\n",
+    "for i in range(1,N+1):\n",
+    "    for j in range(N):\n",
+    "        if i==A[j]:\n",
+    "            ans.append(j+1)\n",
+    "print(*ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2 3 1\n",
+      "3 1 2 "
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "values=list(map(int,input().split()))\n",
+    "keys=list(range(1,N+1))\n",
+    "d=dict(zip(keys,values))\n",
+    "e=sorted(d.items(), key=lambda x:x[1])\n",
+    "for i in range(N):\n",
+    "    print(e[i][0],end=\" \")"
    ]
   },
   {
