--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4404,6 +4404,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#138 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "138 138 138 138 138\n",
+      "138.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "v=sorted(list(map(int,input().split())))\n",
+    "while len(v)>1:\n",
+    "    v[0]=(v[0]+v[1])/2\n",
+    "    v.pop(1)\n",
+    "print(*v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#137 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "abaaaaaaaa\n",
+      "oneplustwo\n",
+      "aaaaaaaaba\n",
+      "twoplusone\n",
+      "aaaabaaaaa\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "N=int(input())\n",
+    "s=[]\n",
+    "count=0\n",
+    "for _ in range(N):\n",
+    "    s.append(str(input()))\n",
+    "for i in itertools.combinations(s,2):\n",
+    "    if sorted(i[0])==sorted(i[1]):\n",
+    "        count+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
@@ -4542,7 +4616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
