--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4811,6 +4811,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#132 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "99592 10342 29105 78532 83018 11639 92015 77204 30914 21912 34519 80835 100000 1\n",
+      "42685\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "d=list(map(int,input().split()))\n",
+    "d=sorted(int(i) for i in d)\n",
+    "print(d[N//2]-d[N//2-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
